--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".view.ui.MainActivity"
+        tools:context=".view.MainActivity"
         android:orientation="vertical">
 
         <androidx.fragment.app.FragmentContainerView
