--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -46,7 +46,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Forgot your password"
-            android:padding="20dp" />
+            android:padding="20dp"
+            android:id="@+id/tv_reset_password"/>
 
     </LinearLayout>
 </layout>
