--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -2,12 +2,12 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/my_nav"
-    app:startDestination="@id/loginFragment"
+    app:startDestination="@id/splashFragment"
     xmlns:tools="http://schemas.android.com/tools">
 
     <fragment
         android:id="@+id/loginFragment"
-        android:name="com.example.navigationapp.view.ui.LoginFragment"
+        android:name="com.example.navigationapp.view.LoginFragment"
         tools:layout="@layout/fragment_login"
         android:label="LoginFragment" >
 
@@ -15,16 +15,13 @@
             android:id="@+id/action_loginFragment_to_registerFragment"
             app:destination="@id/registerFragment"/>
         <action
-            android:id="@+id/action_loginFragment_to_homeFragment2"
+            android:id="@+id/action_loginFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
-        <!--        <action-->
-<!--            android:id="@+id/action_loginFragment_to_homeFragment"-->
-<!--            app:destination="@id/homeFragment" />-->
     </fragment>
 
     <fragment
         android:id="@+id/registerFragment"
-        android:name="com.example.navigationapp.view.ui.RegisterFragment"
+        android:name="com.example.navigationapp.view.RegisterFragment"
         android:label="RegisterFragment"
         tools:layout="@layout/fragment_register">
         <action
@@ -34,9 +31,29 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.example.navigationapp.view.ui.HomeFragment"
+        android:name="com.example.navigationapp.view.HomeFragment"
         android:label="HomeFragment"
         tools:layout="@layout/fragment_home">
+    </fragment>
+
+    <fragment
+        android:id="@+id/splashFragment"
+        android:name="com.example.navigationapp.view.SplashFragment"
+        android:label="SplashFragment"
+        tools:layout="@layout/fragment_splash">
+        <action
+            android:id="@+id/action_splashFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+        <action
+            android:id="@+id/action_splashFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/tabFragment"
+        android:name="com.example.navigationapp.view.TabFragment"
+        android:label="TabFragment"
+        tools:layout="@layout/fragment_tab">
     </fragment>
 
 
