--- a/app/src/main/res/layout/fragment_tab.xml
+++ b/app/src/main/res/layout/fragment_tab.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -13,12 +14,25 @@
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            app:tabIndicatorColor="@color/quantum_amber600"
+            app:tabMode="scrollable"
+            android:background="@color/browser_actions_bg_grey"
+            app:tabSelectedTextColor="@color/black">
+
+        </com.google.android.material.tabs.TabLayout>
+
 
         <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/view_pager_2"
+            android:id="@+id/viewPager2"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            app:userInputEnabled="@{false}">
+
+
+        </androidx.viewpager2.widget.ViewPager2>
+
+
 
     </LinearLayout>
 </layout>
