--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -15,8 +15,8 @@
             android:id="@+id/action_loginFragment_to_registerFragment"
             app:destination="@id/registerFragment"/>
         <action
-            android:id="@+id/action_loginFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
+            android:id="@+id/action_loginFragment_to_tabFragment"
+            app:destination="@id/tabFragment" />
     </fragment>
 
     <fragment
@@ -34,6 +34,9 @@
         android:name="com.example.navigationapp.view.HomeFragment"
         android:label="HomeFragment"
         tools:layout="@layout/fragment_home">
+<!--        <action-->
+<!--            android:id="@+id/action_homeFragment_to_searchPlaceFragment"-->
+<!--            app:destination="@id/searchPlaceFragment" />-->
     </fragment>
 
     <fragment
@@ -45,9 +48,19 @@
             android:id="@+id/action_splashFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
         <action
-            android:id="@+id/action_splashFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
+            android:id="@+id/action_splashFragment_to_tabFragment"
+            app:destination="@id/tabFragment" />
     </fragment>
+
+<!--    <fragment-->
+<!--        android:id="@+id/searchPlaceFragment"-->
+<!--        android:name="com.example.navigationapp.view.SearchPlacesFragment"-->
+<!--        android:label="SearchPlaceFragment"-->
+<!--        tools:layout="@layout/fragment_search_places">-->
+<!--        <action-->
+<!--            android:id="@+id/action_searchPlaceFragment_to_homeFragment"-->
+<!--            app:destination="@id/homeFragment" />-->
+<!--    </fragment>-->
 
     <fragment
         android:id="@+id/tabFragment"
@@ -55,6 +68,14 @@
         android:label="TabFragment"
         tools:layout="@layout/fragment_tab">
     </fragment>
+
+    <fragment
+        android:id="@+id/informationFragment"
+        android:name="com.example.navigationapp.view.InformationFragment"
+        android:label="InformationFragment"
+        tools:layout="@layout/fragment_information">
+    </fragment>
+
 
 
 </navigation>
