--- a/app/src/main/res/layout/fragment_tab.xml
+++ b/app/src/main/res/layout/fragment_tab.xml
@@ -9,28 +9,32 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:weightSum="20">
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/viewPager2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="19">
+
+        </androidx.viewpager2.widget.ViewPager2>
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:tabIndicatorColor="@color/quantum_amber600"
-            app:tabMode="scrollable"
-            android:background="@color/browser_actions_bg_grey"
-            app:tabSelectedTextColor="@color/black">
+            app:tabMode="fixed"
+            app:tabTextColor="@color/black"
+            android:background="@color/white"
+            app:tabSelectedTextColor="@color/quantum_pink"
+            android:layout_weight="1">
 
         </com.google.android.material.tabs.TabLayout>
 
 
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/viewPager2"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:userInputEnabled="@{false}">
 
-
-        </androidx.viewpager2.widget.ViewPager2>
 
 
 
