--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -15,8 +15,8 @@
             android:id="@+id/action_loginFragment_to_registerFragment"
             app:destination="@id/registerFragment"/>
         <action
-            android:id="@+id/action_loginFragment_to_tabFragment"
-            app:destination="@id/tabFragment" />
+            android:id="@+id/action_loginFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
     </fragment>
 
     <fragment
@@ -37,6 +37,9 @@
 <!--        <action-->
 <!--            android:id="@+id/action_homeFragment_to_searchPlaceFragment"-->
 <!--            app:destination="@id/searchPlaceFragment" />-->
+        <action
+            android:id="@+id/action_homeFragment_to_informationFragment"
+            app:destination="@id/informationFragment" />
     </fragment>
 
     <fragment
@@ -48,8 +51,8 @@
             android:id="@+id/action_splashFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
         <action
-            android:id="@+id/action_splashFragment_to_tabFragment"
-            app:destination="@id/tabFragment" />
+            android:id="@+id/action_splashFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
     </fragment>
 
 <!--    <fragment-->
