--- a/app/src/main/res/layout/fragment_information.xml
+++ b/app/src/main/res/layout/fragment_information.xml
@@ -2,7 +2,9 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
-
+        <variable
+            name="viewmodel"
+            type="com.example.navigationapp.viewmodel.FirebaseViewModel" />
     </data>
 
     <LinearLayout
