--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -15,8 +15,8 @@
             android:id="@+id/action_loginFragment_to_registerFragment"
             app:destination="@id/registerFragment"/>
         <action
-            android:id="@+id/action_loginFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
+            android:id="@+id/action_loginFragment_to_tabFragment"
+            app:destination="@id/tabFragment" />
     </fragment>
 
     <fragment
@@ -33,14 +33,7 @@
         android:id="@+id/homeFragment"
         android:name="com.example.navigationapp.view.HomeFragment"
         android:label="HomeFragment"
-        tools:layout="@layout/fragment_home">
-<!--        <action-->
-<!--            android:id="@+id/action_homeFragment_to_searchPlaceFragment"-->
-<!--            app:destination="@id/searchPlaceFragment" />-->
-        <action
-            android:id="@+id/action_homeFragment_to_informationFragment"
-            app:destination="@id/informationFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_home"/>
 
     <fragment
         android:id="@+id/splashFragment"
@@ -50,9 +43,6 @@
         <action
             android:id="@+id/action_splashFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
-        <action
-            android:id="@+id/action_splashFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
     </fragment>
 
 <!--    <fragment-->
@@ -70,6 +60,12 @@
         android:name="com.example.navigationapp.view.TabFragment"
         android:label="TabFragment"
         tools:layout="@layout/fragment_tab">
+        <action
+            android:id="@+id/action_tabFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_tabFragment_to_informationFragment"
+            app:destination="@id/informationFragment" />
     </fragment>
 
     <fragment
