--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -43,6 +43,9 @@
         <action
             android:id="@+id/action_splashFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
+        <action
+            android:id="@+id/action_splashFragment_to_tabFragment"
+            app:destination="@id/tabFragment" />
     </fragment>
 
 <!--    <fragment-->
@@ -73,6 +76,9 @@
         android:name="com.example.navigationapp.view.InformationFragment"
         android:label="InformationFragment"
         tools:layout="@layout/fragment_information">
+        <action
+            android:id="@+id/action_informationFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
     </fragment>
 
 
