--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -33,7 +33,11 @@
         android:id="@+id/homeFragment"
         android:name="com.example.navigationapp.view.HomeFragment"
         android:label="HomeFragment"
-        tools:layout="@layout/fragment_home"/>
+        tools:layout="@layout/fragment_home">
+        <action
+            android:id="@+id/action_homeFragment_to_bottomSheetDialog"
+            app:destination="@id/bottomSheetDialog" />
+    </fragment>
 
     <fragment
         android:id="@+id/splashFragment"
@@ -80,6 +84,16 @@
             android:id="@+id/action_informationFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
     </fragment>
+
+    <dialog
+        android:id="@+id/bottomSheetDialog"
+        android:name="com.example.navigationapp.view.adapter.BottomSheetDialogFragment"
+        android:label="bottomSheetDialog"
+        tools:layout="@layout/bottom_sheet_map">
+        <action
+            android:id="@+id/action_bottomSheetDialog_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </dialog>
 
 
 
