--- a/app/src/main/res/layout/bottom_sheet_map.xml
+++ b/app/src/main/res/layout/bottom_sheet_map.xml
@@ -15,7 +15,7 @@
         android:orientation="vertical"
         android:paddingBottom="20dp"
         app:behavior_hideable="true"
-        app:behavior_peekHeight="56dp"
+        app:behavior_peekHeight="30dp"
         android:gravity="center"
         app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
@@ -27,6 +27,7 @@
             android:layout_marginEnd="0dp"
             android:background="#E8E5E5"
             android:gravity="center|top"
+            android:textColor="@color/quantum_bluegrey950"
             android:text="Location Information"
             android:textAlignment="center"
             android:textSize="18sp"
