--- a/app/src/main/res/layout/bottom_sheet_map.xml
+++ b/app/src/main/res/layout/bottom_sheet_map.xml
@@ -8,16 +8,16 @@
     </data>
 
     <LinearLayout
-        android:id="@+id/bottom_sheet_map"
+        android:id="@+id/bottomSheetMap"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#FFFFFF"
+        android:background="@drawable/bg_bottomsheet_dialog"
         android:orientation="vertical"
         android:paddingBottom="20dp"
         app:behavior_hideable="true"
         app:behavior_peekHeight="30dp"
         android:gravity="center"
-        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
+        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
         <TextView
             android:id="@+id/textView2"
@@ -34,7 +34,7 @@
             android:textStyle="bold" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <TextView
@@ -54,9 +54,10 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:gravity="center">
 
             <ImageButton
                 android:layout_width="200px"
