--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,7 +10,7 @@
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         app:navGraph="@navigation/my_nav">
 
         <FrameLayout
@@ -21,7 +21,7 @@
                 android:id="@+id/map"
                 android:name="com.google.android.gms.maps.SupportMapFragment"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="wrap_content" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/btn_current_location"
@@ -32,7 +32,8 @@
                 android:src="@drawable/ic_baseline_my_location_24"/>
         </FrameLayout>
 
-            <include layout="@layout/bottom_sheet_map"/>
+<!--        <include layout="@layout/bottom_sheet_map"-->
+<!--            android:id="@+id/bottom_sheet_id"/>-->
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
