--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:navGraph="@navigation/my_nav"
+            app:defaultNavHost="true"
             android:name="androidx.navigation.fragment.NavHostFragment"
             />
 
