--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -5,39 +5,11 @@
     app:startDestination="@id/splashFragment"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <fragment
-        android:id="@+id/loginFragment"
-        android:name="com.example.navigationapp.view.LoginFragment"
-        tools:layout="@layout/fragment_login"
-        android:label="LoginFragment" >
-
-        <action
-            android:id="@+id/action_loginFragment_to_registerFragment"
-            app:destination="@id/registerFragment"/>
-        <action
-            android:id="@+id/action_loginFragment_to_tabFragment"
-            app:destination="@id/tabFragment" />
-    </fragment>
-
-    <fragment
-        android:id="@+id/registerFragment"
-        android:name="com.example.navigationapp.view.RegisterFragment"
-        android:label="RegisterFragment"
-        tools:layout="@layout/fragment_register">
-        <action
-            android:id="@+id/action_registerFragment_to_loginFragment"
-            app:destination="@id/loginFragment" />
-    </fragment>
-
-    <fragment
-        android:id="@+id/homeFragment"
-        android:name="com.example.navigationapp.view.HomeFragment"
-        android:label="HomeFragment"
-        tools:layout="@layout/fragment_home">
-<!--        <action-->
-<!--            android:id="@+id/action_homeFragment_to_bottomSheetDialog"-->
-<!--            app:destination="@id/bottomSheetDialog" />-->
-    </fragment>
+    <activity
+        android:id="@+id/mainActivity"
+        android:name="com.example.navigationapp.view.MainActivity"
+        android:label="activity_main"
+        tools:layout="@layout/activity_main" />
 
     <fragment
         android:id="@+id/splashFragment"
@@ -52,15 +24,53 @@
             app:destination="@id/tabFragment" />
     </fragment>
 
-<!--    <fragment-->
-<!--        android:id="@+id/searchPlaceFragment"-->
-<!--        android:name="com.example.navigationapp.view.SearchPlacesFragment"-->
-<!--        android:label="SearchPlaceFragment"-->
-<!--        tools:layout="@layout/fragment_search_places">-->
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="com.example.navigationapp.view.LoginFragment"
+        tools:layout="@layout/fragment_login"
+        android:label="LoginFragment" >
+
+        <action
+            android:id="@+id/action_loginFragment_to_registerFragment"
+            app:destination="@id/registerFragment"
+            app:popUpTo="@id/registerFragment"
+            app:popUpToInclusive="true"/>
+        <action
+            android:id="@+id/action_loginFragment_to_tabFragment"
+            app:destination="@id/tabFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/registerFragment"
+        android:name="com.example.navigationapp.view.RegisterFragment"
+        android:label="RegisterFragment"
+        tools:layout="@layout/fragment_register">
+        <action
+            android:id="@+id/action_registerFragment_to_loginFragment"
+            app:destination="@id/loginFragment"
+            app:popUpTo="@id/loginFragment"
+            app:popUpToInclusive="true"/>
+    </fragment>
+
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="com.example.navigationapp.view.HomeFragment"
+        android:label="HomeFragment"
+        tools:layout="@layout/fragment_home">
 <!--        <action-->
-<!--            android:id="@+id/action_searchPlaceFragment_to_homeFragment"-->
-<!--            app:destination="@id/homeFragment" />-->
-<!--    </fragment>-->
+<!--            android:id="@+id/action_homeFragment_to_bottomSheetDialog"-->
+<!--            app:destination="@id/bottomSheetDialog" />-->
+        <action
+            android:id="@+id/action_homeFragment_to_routeFragment"
+            app:destination="@id/routeFragment"
+            app:enterAnim="@android:anim/slide_in_left"
+            app:exitAnim="@android:anim/slide_out_right"
+            app:popEnterAnim="@android:anim/fade_in"
+            app:popExitAnim="@android:anim/fade_out" />
+    </fragment>
+
+
+
 
     <fragment
         android:id="@+id/tabFragment"
@@ -79,21 +89,18 @@
         android:id="@+id/informationFragment"
         android:name="com.example.navigationapp.view.InformationFragment"
         android:label="InformationFragment"
-        tools:layout="@layout/fragment_information">
-        <action
-            android:id="@+id/action_informationFragment_to_loginFragment"
-            app:destination="@id/loginFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_information"/>
 
-<!--    <dialog-->
-<!--        android:id="@+id/bottomSheetDialog"-->
-<!--        android:name="com.example.navigationapp.view.adapter.BottomSheetDialogFragment"-->
-<!--        android:label="bottomSheetDialog"-->
-<!--        tools:layout="@layout/bottom_sheet_map">-->
-<!--        <action-->
-<!--            android:id="@+id/action_bottomSheetDialog_to_homeFragment"-->
-<!--            app:destination="@id/homeFragment" />-->
-<!--    </dialog>-->
+    <fragment
+        android:id="@+id/routeFragment"
+        android:name="com.example.navigationapp.view.RouteFragment"
+        android:label="RouteFragment"
+        tools:layout="@layout/fragment_route">
+
+        <action
+            android:id="@+id/action_routeFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
 
 
 </navigation>
