--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -69,9 +69,6 @@
             app:popExitAnim="@android:anim/fade_out" />
     </fragment>
 
-
-
-
     <fragment
         android:id="@+id/tabFragment"
         android:name="com.example.navigationapp.view.TabFragment"
@@ -89,7 +86,13 @@
         android:id="@+id/informationFragment"
         android:name="com.example.navigationapp.view.InformationFragment"
         android:label="InformationFragment"
-        tools:layout="@layout/fragment_information"/>
+        tools:layout="@layout/fragment_information">
+        <action
+            android:id="@+id/action_informationFragment_to_loginFragment"
+            app:destination="@id/loginFragment"
+            app:popUpTo="@id/informationFragment"
+            app:popUpToInclusive="true"/>
+    </fragment>
 
     <fragment
         android:id="@+id/routeFragment"
