--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<navigation xmlns:android="http://schemas.android.com/apk/res/android"
+<navigation
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/my_nav"
-    app:startDestination="@id/splashFragment"
-    xmlns:tools="http://schemas.android.com/tools">
+    app:startDestination="@id/splashFragment">
+
+    <include app:graph="@navigation/main_nav_graph"/>
 
     <activity
         android:id="@+id/mainActivity"
@@ -20,8 +23,8 @@
             android:id="@+id/action_splashFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
         <action
-            android:id="@+id/action_splashFragment_to_tabFragment"
-            app:destination="@id/tabFragment" />
+            android:id="@+id/action_splashFragment_to_main_nav_graph"
+            app:destination="@id/main_nav_graph" />
     </fragment>
 
     <fragment
@@ -36,8 +39,8 @@
             app:popUpTo="@id/registerFragment"
             app:popUpToInclusive="true"/>
         <action
-            android:id="@+id/action_loginFragment_to_tabFragment"
-            app:destination="@id/tabFragment" />
+            android:id="@+id/action_loginFragment_to_main_nav_graph"
+            app:destination="@id/main_nav_graph" />
     </fragment>
 
     <fragment
@@ -52,58 +55,9 @@
             app:popUpToInclusive="true"/>
     </fragment>
 
-    <fragment
-        android:id="@+id/homeFragment"
-        android:name="com.example.navigationapp.view.HomeFragment"
-        android:label="HomeFragment"
-        tools:layout="@layout/fragment_home">
-<!--        <action-->
-<!--            android:id="@+id/action_homeFragment_to_bottomSheetDialog"-->
-<!--            app:destination="@id/bottomSheetDialog" />-->
-        <action
-            android:id="@+id/action_homeFragment_to_routeFragment"
-            app:destination="@id/routeFragment"
-            app:enterAnim="@android:anim/slide_in_left"
-            app:exitAnim="@android:anim/slide_out_right"
-            app:popEnterAnim="@android:anim/fade_in"
-            app:popExitAnim="@android:anim/fade_out" />
-    </fragment>
 
-    <fragment
-        android:id="@+id/tabFragment"
-        android:name="com.example.navigationapp.view.TabFragment"
-        android:label="TabFragment"
-        tools:layout="@layout/fragment_tab">
-        <action
-            android:id="@+id/action_tabFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
-        <action
-            android:id="@+id/action_tabFragment_to_informationFragment"
-            app:destination="@id/informationFragment" />
-    </fragment>
 
-    <fragment
-        android:id="@+id/informationFragment"
-        android:name="com.example.navigationapp.view.InformationFragment"
-        android:label="InformationFragment"
-        tools:layout="@layout/fragment_information">
-        <action
-            android:id="@+id/action_informationFragment_to_loginFragment"
-            app:destination="@id/loginFragment"
-            app:popUpTo="@id/informationFragment"
-            app:popUpToInclusive="true"/>
-    </fragment>
 
-    <fragment
-        android:id="@+id/routeFragment"
-        android:name="com.example.navigationapp.view.RouteFragment"
-        android:label="RouteFragment"
-        tools:layout="@layout/fragment_route">
-
-        <action
-            android:id="@+id/action_routeFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
-    </fragment>
 
 
 </navigation>
