--- a/app/src/main/res/layout/fragment_information.xml
+++ b/app/src/main/res/layout/fragment_information.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="viewmodel"
-            type="com.example.navigationapp.viewmodel.UserViewModel" />
+            type="com.example.navigationapp.viewmodel.InformationViewModel" />
     </data>
 
     <LinearLayout
