--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,7 +4,8 @@
     <data>
         <variable
             name="viewmodel"
-            type="com.example.navigationapp.viewmodel.UserViewModel" />
+            type="com.example.navigationapp.viewmodel.LoginViewModel" />
+
     </data>
 
     <LinearLayout
@@ -48,6 +49,12 @@
             android:text="Forgot your password"
             android:padding="20dp"
             android:id="@+id/tv_reset_password"/>
+
+        <ProgressBar
+            android:id="@+id/spinner_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"/>
 
     </LinearLayout>
 </layout>
